# agentic-atlas

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  gemini-extension.json  pyproject.toml  release-please-config.json
.claude-plugin/: plugin.json
.codex/: INSTALL.md
_bmad/: config.toml
agentic_atlas/: __init__.py  classify.py  cli.py  evidence.py  judge.py  models.py  profiler.py  report.py  scoring.py  spec.py
atlas/: __init__.py  cli.py  docs.py  evidence.py  judge.py  scoring.py  spec.py
docs/: architecture-engine.md  architecture-plugin.md  architecture-rubric.md  axes.md  conflict-of-interest.md  design.md  development-guide.md  index.md  integration-architecture.md  project-overview.md  project-parts.json  project-scan-report.json  rubric-v2-plan.md  skill-integration.md  source-tree-analysis.md  versioning.md
profiles/: agent-os.html  agent-os.json  agentic-toolkit.html  agentic-toolkit.json  ai-dev-tasks.html  ai-dev-tasks.json  ai-dlc.html  ai-dlc.json  backlog-md.html  backlog-md.json  bmad-method.html  bmad-method.json  cc-sdd.html  cc-sdd.json  ccpm.html  ccpm.json  context-engineering.html  context-engineering.json  cursor-memory-bank.html  cursor-memory-bank.json  gsd.html  gsd.json  gstack.html  gstack.json  openspec.html  openspec.json  prps-agentic-eng.html  prps-agentic-eng.json  spec-kit.html  spec-kit.json  superclaude.html  superclaude.json  superpowers.html  superpowers.json  task-master.html  task-master.json
rubric/: CHANGELOG.md  schema.json  v1.0.0.yaml
scripts/: build_site.py  check_corpus.py  corpus.py
specs/: handoff.md  personas-correlation-ordering.md
tests/: test_calibration.py  test_classify.py  test_cli.py  test_docs.py  test_spec.py  (+5 more)
(+49 files in other folders)
