[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-workflow-atlas"
version = "0.1.0"
description = "An open, versioned rubric for profiling agentic development workflows on signed bipolar axes."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Adam Caviness" }]
keywords = ["agentic", "claude-code", "rubric", "evaluation", "workflows"]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
atlas = "atlas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
